# rocon_demos

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README.rst  Readme.md  cafe_concert.rosinstall  ces_android.rosinstall  ces_software.rosinstall  concert.rosinstall  gazebo_solution.rosinstall  package.xml  rocon_demo.rosinstall  rocon_rosjava.rosinstall  turtlebot.rosinstall  turtles.rosinstall  turtles_fuerte.rosinstall
cafe_concert/: CMakeLists.txt  package.xml
cafe_concert/annotations/: controlroom.yaml  dorothy.yaml
cafe_concert/concert/: cafe.concert  cafe_sim.concert
cafe_concert/launch/: cafe_backend.launch  database.launch  waiterbot.launch
cafe_concert/maps/: cm_new.pgm  cm_new.yaml  controlroom.pgm  croom.yaml  dorothy_cafe_new.yaml  dorothy_cafe_new2.pgm  dorothy_cafe_new_polished.pgm  dorothy_clean.pgm
cafe_concert/rosinstalls/: concert_master.rosinstall
cafe_concert/solution/: cafe.services  cafe_sim.services  concert.launch
cafe_remote_order_manager/: CMakeLists.txt  package.xml  setup.py  standalone.rosinstall
cafe_remote_order_manager/launch/: remote_order_manager.launch  standalone.launch
cafe_remote_order_manager/scripts/: manager.py
cafe_remote_order_manager/tests/: dummy_order.py
cafe_solution/: CMakeLists.txt  Readme.md  package.xml
cafe_solution/concert/: cafe.concert
cafe_solution/launch/: cafe_backend.launch  database.launch  waiterbot.launch
cafe_solution/maps/: control_room.yaml  controlroom.pgm  controlroom.yaml  edu_room.pgm  edu_room_cropped.yaml  edu_room_cropped_2.pgm
cafe_solution/resources/: control_room.pgm  control_room.yaml  controlroom.yaml
cafe_solution/rosinstalls/: waiterbot.rosinstall
cafe_solution/solution/: cafe.services  concert.launch
cafe_task_manager/: CMakeLists.txt  package.xml
ces_android_apps/: CMakeLists.txt  README.md  build.gradle  package.xml  settings.gradle
ces_android_apps/ces_demo_order_app/: build.gradle
ces_rapps/: .cproject  .project  CMakeLists.txt  package.xml
ces_rapps/rapps/: ces.rapps
colour_signal/: .cproject  .project  CMakeLists.txt  Makefile  Readme.md  package.xml
colour_signal/include/: CMakeLists.txt
colour_signal/launch/: bgr_histograms.launch  debug.launch  standalone.launch  view_images.launch  waiterbot.launch
colour_signal/src/: CMakeLists.txt  fake_publisher.cpp  node.cpp
concert_common_test_services/: CMakeLists.txt  package.xml
concert_demo_rapps/: CMakeLists.txt  README.md  package.xml
concert_demo_rapps/interactions/: nao.interactions
concert_demo_rapps/launch/: dummy_notice_request.launch
concert_demo_rapps/scripts/: dummy_vending_machine.py  room_checker.py
concert_demo_sim_rapps/: CMakeLists.txt  package.xml
concert_demo_sim_rapps/scripts/: p2p_delivery_robot_soft.py  pickup_delivery_robot_soft.py
concert_ping_logger/: CMakeLists.txt  package.xml  setup.py
concert_ping_logger/scripts/: concert_client_ping.py
concert_service_turtlebot_gazebo/: CMakeLists.txt  package.xml  setup.py
concert_service_turtlebot_gazebo/launch/: turtlebot_empty_world.launch
concert_service_turtlebot_gazebo/maps/: empty_world.yaml
concert_service_turtlebot_gazebo/scripts/: turtlebot_gazebo_manager
concert_service_turtlebot_gazebo/worlds/: turtlebot_empty_world.world
delivery_order_manager/: CMakeLists.txt  package.xml  setup.py
delivery_order_manager/launch/: order_manager.launch  order_manager_sim.launch
delivery_order_manager/scripts/: manager.py
dummy_ces_tablet/: CMakeLists.txt  package.xml  setup.py
dummy_ces_tablet/scripts/: dummy_ces_tablet_node.py  dummy_green_button.py  dummy_red_button.py
kitchen/: CMakeLists.txt  package.xml
kitchen/www/: index.html
map_saver/: CMakeLists.txt  package.xml  setup.py
map_saver/scripts/: map_saver.py
office_devices_manager/: CMakeLists.txt  package.xml
office_devices_manager/launch/: devices_manager.launch
office_devices_manager/scripts/: auto_door_manager.py  hue_manager.py
office_hue_manager/: CMakeLists.txt  package.xml  setup.py
office_hue_manager/launch/: hue_manager.launch
office_hue_manager/scripts/: hue_manager.py
office_rapps/: .cproject  CMakeLists.txt  package.xml
office_rapps/scripts/: dummy_waypoint_navigation.py  office_order_app_sim.py  office_task_manager_sim.py  office_waiter_soft.py  office_waiter_soft_no_backend.py  waiter_soft.py  waiter_soft_no_backend.py  waiter_soft_office_concert_sim.py
office_sim_solution/: CMakeLists.txt  package.xml
office_sim_solution/solutions/: concert.launch  office_sim.services
office_sim_solution/worlds/: yujin_office.world
office_web_interface/: package.xml
opp_demo/: CMakeLists.txt  Readme.md  cafe_backend.rosinstall  concert_master.rosinstall  package.xml  waiterbot.rosinstall
opp_demo/concert/: opp.concert
opp_demo/interactions/: opp_roles_and_apps.interactions
opp_demo/launch/: cafe_backend.launch  concert.launch  database.launch  waiterbot.launch
opp_demo/launchers/: cafe_delivery.launch  teleop.launch
opp_demo/rosinstalls/: cafe_backend.rosinstall  concert_master.rosinstall  waiterbot.rosinstall
opp_demo/services/: make_a_map.service  opp_demo.services  teleop.service
opp_demo/yaml/: cafe_delivery_implementation.yaml  cafe_implementation.yaml
realrobotshow_ctrl/: CMakeLists.txt  package.xml  setup.py
realrobotshow_ctrl/interactions/: pairing.interactions  pairing.interactions.backup
realrobotshow_ctrl/launch/: robot_bringup.launch  robot_bringup_sim.launch  robot_ctrl.launch
realrobotshow_ctrl/param/: ar_markers.yaml
realrobotshow_ctrl/resources/: show_annotation.yaml  show_map.pgm  show_map.yaml  showroom_map.yaml
realrobotshow_ctrl/scripts/: delivery_robot_manager.py
realrobotshow_order_manager/: CMakeLists.txt  package.xml  setup.py
realrobotshow_order_manager/launch/: order_manager.launch  order_manager_sim.launch
realrobotshow_order_manager/scripts/: dummy_waiterbot.py  kitchen_frontend.py  manager.py
rocon_ninja_block/: CMakeLists.txt  package.xml
rocon_ninja_block/action/: CheckMotion.action  GetDeviceList.action
rocon_ninja_block/launch/: nb_bridge.launch
(+1040 files in other folders)
