<?xml version="1.0"?>
<package>
  <name>concert_common_rapps</name>
  <version>0.0.0</version>
  <description>The concert common rapps package</description>

  <maintainer email="jihoonl@yujinrobot.com">Jihoon Lee</maintainer>
  <maintainer email="dwlee@yujinrobot.com">Dong Wook Lee</maintainer>
  <license>BSD</license>

  <!-- <url type="website">http://ros.org/wiki/cafe_rapps</url> -->
  <buildtool_depend>catkin</buildtool_depend>
<!--  <run_depend>rocon_devices</run_depend>-->
  <run_depend>kobuki_softapps</run_depend>
  <run_depend>robot_pose_publisher</run_depend>
  <run_depend>yocs_msgs</run_depend>
  <run_depend>rocon_apps</run_depend>

  <export>
    <rocon_app>rapps/pickup_delivery/pickup_delivery.rapp</rocon_app>
    <rocon_app>rapps/vm_delivery/vm_delivery.rapp</rocon_app>
    <rocon_app>rapps/vm_delivery_sim/vm_delivery_sim.rapp</rocon_app>
    <rocon_app>rapps/pickup_delivery_sim/pickup_delivery_sim.rapp</rocon_app>
    <rocon_app>rapps/dummy_gocart/waypoint_navigation.rapp</rocon_app>
    <rocon_app>rapps/drink_giver/drink_giver.rapp</rocon_app>
    <rocon_app>rapps/drink_giver/drink_giver_sim.rapp</rocon_app>
  </export>
</package>
