<?xml version="1.0"?>
<package>
  <name>demo_concert</name>
  <version>0.0.0</version>
  <description>
    Yujin Robot Roboworld 2015 Concert
  </description>

  <maintainer email="hrkim@yujinrobot.com">HyungRyul Kim</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>concert_master</run_depend>
  <run_depend>concert_workflow_engine_blockly</run_depend>
  <run_depend>world_canvas_server</run_depend>
  <run_depend>concert_service_admin</run_depend>
  <run_depend>concert_service_indoor_2d_map_prep</run_depend>
  <run_depend>concert_service_waypoint_navigation</run_depend>
  <run_depend>concert_common_services</run_depend>
  <run_depend>concert_common_test_services</run_depend>
</package>
