<?xml version="1.0"?>
<package>
  <name>cafe_concert</name>
  <version>0.0.0</version>
  <description>The cafe_concert package</description>

  <maintainer email="jihoonl@yujinrobot.com">Jihoon Lee</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>concert_service_link_graph</run_depend>

  <export>
    <concert_service>services/cafe_delivery/cafe_delivery.service</concert_service>
    <concert_service>services/cafe_annotations/cafe_annotations.service</concert_service>
  </export>
</package>
