<?xml version="1.0"?>
<package>
  <name>cafe_remote_order_manager</name>
  <version>0.0.0</version>
  <description>The cafe_remote_order_manager package</description>
  <maintainer email="jihoonl@yujinrobot.com">Jihoon Lee</maintainer>

  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/cafe_remote_order_manager</url> -->
  <author>Jihoon Lee</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cafe_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>cafe_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rosbridge_server</run_depend>

  <export>
  </export>
</package>
