<?xml version="1.0"?>
<package>
  <name>cafe_solution</name>
  <version>0.0.0</version>
  <description>The cafe_solution package</description>

  <maintainer email="jihoonl@yujinrobot.com">Jihoon Lee</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>concert_service_link_graph</run_depend>

  <export>
    <rocon_service>services/cafe_delivery/cafe_delivery.service</rocon_service>
  </export>
</package>
