<?xml version="1.0"?>
<package>
  <name>task_manager</name>
  <version>0.0.0</version>
  <description>The task_manager package</description>

  <maintainer email="dwlee@todo.todo">dwlee</maintainer>

  <license>BSD</license>

  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>rospy</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
