<?xml version="1.0"?>
<package>
  <name>ces_android_apps</name>
  <version>0.1.0</version>
  <description>Gathering of CES demo Android apps</description>
  <maintainer email="dwlee@yujinrobot.com">Dong Wook Lee</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>android_apps</build_depend>
  <build_depend>android_core</build_depend>
  <build_depend>android_extras</build_depend>
  <build_depend>rosjava_core</build_depend>
  <build_depend>rosjava_build_tools</build_depend>
</package>
