<?xml version="1.0"?>
<package>
  <name>ces_rapps</name>
  <version>0.0.0</version>
  <description>
    This package contains rapps for CES
  </description>

  <maintainer email="jihoonl@yujinrobot.com">Jihoon Lee</maintainer>
  <author>Jihoon Lee</author>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/ces_rapps</url> 

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>waiterbot_ctrl_nowireless</run_depend>

</package>
