<?xml version="1.0"?>
<package>
  <name>colour_signal</name>
  <version>0.1.0</version>
  <description>
    Detect a signal from the environment typically cast by a coloured light
    source. We do thresholding on incoming images and trigger a signal if
    a particular colour threshold is exceeded.
  </description>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/colour_signal</url>
  <url type="repository">https://github.com/stonier/rocon_demos</url>
  <url type="bugtracker">https://github.com/stonier/rocon_demos/issues</url>
  <author email="d.stonier@gmail.com">Daniel Stonier</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>ecl_command_line</build_depend>
  <build_depend>ecl_exceptions</build_depend>
  <build_depend>opencv2</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>ecl_command_line</run_depend>
  <run_depend>ecl_exceptions</run_depend>
  <run_depend>opencv2</run_depend>
</package>
