<?xml version="1.0"?>
<package>
  <name>concert_demo_rapps</name>
  <version>0.0.0</version>
  <description>The concert common rapps package</description>

  <maintainer email="jihoonl@yujinrobot.com">Jihoon Lee</maintainer>
  <maintainer email="dwlee@yujinrobot.com">Dong Wook Lee</maintainer>
  <license>BSD</license>

  <!-- <url type="website">http://ros.org/wiki/cafe_rapps</url> -->
  <buildtool_depend>catkin</buildtool_depend>
<!--  <run_depend>rocon_devices</run_depend>-->
  <run_depend>kobuki_softapps</run_depend>
  <run_depend>robot_pose_publisher</run_depend>
  <run_depend>yocs_msgs</run_depend>
  <run_depend>rocon_apps</run_depend>
  <run_depend>rocon_demo_msgs</run_depend>
  <run_depend>naoqi_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>room_checker_msgs</run_depend>

  <export>
    <rocon_app>rapps/pickup_delivery/pickup_delivery.rapp</rocon_app>
    <rocon_app>rapps/vm_delivery/vm_delivery.rapp</rocon_app>
    <rocon_app>rapps/drink_giver/drink_giver.rapp</rocon_app>
    <rocon_app>rapps/notice_meta/notice.rapp</rocon_app>
    <rocon_app>rapps/notice_nao/notice_nao.rapp</rocon_app>
    <rocon_app>rapps/room_checker/room_checker.rapp</rocon_app>
    <rocon_app>rapps/room_checker_ninjablock/room_checker_ninjablock.rapp</rocon_app>
  </export>
</package>
