<?xml version="1.0"?>
<package>
  <name>concert_ping_logger</name>
  <version>0.0.0</version>
  <description>
  Logs concert client's status and network ping
  </description>

  <maintainer email="jihoonlee.in@gmail.com">Jihoon Lee</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>concert_master</run_depend>

</package>
