<?xml version="1.0"?>
<package>
  <name>dummy_ces_tablet</name>
  <version>0.0.0</version>
  <description>The dummy_tablet package</description>

  <maintainer email="jihoonl@yujinrobot.com">Jihoon Lee</maintainer>
  <author email="jihoonl@yujinrobot.com">Jihoon Lee</author>

  <license>BSD</license>
  <url type="website">http://ros.org/wiki/dummy_ces_tablet</url>
  <url type="repository">https://github.com/robotics-in-concert/rocon_demos</url>
  <url type="bugtracker">https://github.com/robotics-in-concert/rocon_demos</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>kobuki_msgs</run_depend>
  <run_depend>waiterbot_msgs</run_depend>
  <run_depend>std_srvs</run_depend>

</package>
