<?xml version="1.0"?>
<package>
  <name>map_saver</name>
  <version>0.0.0</version>
  <description>Map saver trigger which saves a map at configured path using map_saver in map_server and crop_map</description>

  <maintainer email="jihoonl@yujinrobot.com">Jihoon Lee</maintainer>
  <author>Jihoon Lee</author>
  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/map_saver</url> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>map_server</build_depend>
  <build_depend>map_store</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>map_server</run_depend>
  <run_depend>map_store</run_depend>
  <run_depend>rospy</run_depend>
</package>
