<?xml version="1.0"?>
<package>
  <name>office_rapps</name>
  <version>0.0.0</version>
  <description>The office_rapps package</description>

  <maintainer email="jihoonl@yujinrobot.com">Jihoon Lee</maintainer>
  <maintainer email="dwlee@yujinrobot.com">Dong Wook Lee</maintainer>
  <license>BSD</license>

  <!-- <url type="website">http://ros.org/wiki/cafe_rapps</url> -->
  <buildtool_depend>catkin</buildtool_depend>


  <export>
    <rocon_app>rapps/kitchen/kitchen.rapp</rocon_app>
    <rocon_app>rapps/map_database/map_database.rapp</rocon_app>
    <rocon_app>rapps/taskcoordinator/taskcoordinator.rapp</rocon_app>
    <rocon_app>rapps/waiter/waiter.rapp</rocon_app>
    <rocon_app>rapps/office_waiter_sim/office_waiter_sim.rapp</rocon_app>
    <!-- <rocon_app>rapps/waiter_sim/waiter_sim.rapp</rocon_app> -->
    <!-- <rocon_app>rapps/waiter_waiterbot/waiter_waiterbot.rapp</rocon_app> -->
  </export>
</package>
