<?xml version="1.0"?>
<package>
  <name>office_rapps</name>
  <version>0.0.0</version>
  <description>The office_rapps package</description>

  <maintainer email="jihoonl@yujinrobot.com">Jihoon Lee</maintainer>
  <maintainer email="dwlee@yujinrobot.com">Dong Wook Lee</maintainer>
  <license>BSD</license>

  <!-- <url type="website">http://ros.org/wiki/cafe_rapps</url> -->
  <buildtool_depend>catkin</buildtool_depend>
<!--  <run_depend>rocon_devices</run_depend>-->
  <run_depend>kobuki_softapps</run_depend>
  <run_depend>robot_pose_publisher</run_depend>
  
  <export>
    <rocon_app>rapps/waiter/waiter.rapp</rocon_app>
    <rocon_app>rapps/office_waiter_sim/office_waiter_sim.rapp</rocon_app>
    <rocon_app>rapps/office_waiter/office_waiter.rapp</rocon_app>
    <rocon_app>rapps/office_order_app_sim/office_order_app_sim.rapp</rocon_app>
    <rocon_app>rapps/office_task_manager_sim/office_task_manager_sim.rapp</rocon_app>
    <rocon_app>rapps/office_hue_manager/office_hue_manager.rapp</rocon_app>
  </export>
</package>
