<?xml version="1.0"?>
<package>
  <name>office_web_interface</name>
  <version>0.0.0</version>
  <description>The office web interface package</description>

  <maintainer email="dwlee@yujinrobot.com">dwlee</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>rosbridge_server</run_depend> 

</package>