<?xml version="1.0"?>
<package>
  <name>realrobotshow_ctrl</name>
  <version>0.0.0</version>
  <description>The realrobotshow_ctrl package</description>

  <maintainer email="jihoonl@yujinrobot.com">Jihoon Lee</maintainer>
  <author email="jihoonl@yujinrobot.com">Jihoon Lee</author>
  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/realrobotshow_ctrl</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>waiterbot_bringup</build_depend>
  <run_depend>waiterbot_bringup</run_depend>

  <export>
  </export>
</package>
