<?xml version="1.0"?>
<package>
  <name>realrobotshow_ctrl</name>
  <version>0.0.0</version>
  <description>The realrobotshow_ctrl package</description>

  <maintainer email="jihoonl@yujinrobot.com">Jihoon Lee</maintainer>
  <author email="jihoonl@yujinrobot.com">Jihoon Lee</author>
  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/realrobotshow_ctrl</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>waiterbot_bringup</build_depend>
  <run_depend>waiterbot_bringup</run_depend>
  <run_depend>simple_delivery_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>

  <export>
    <rocon_app>rapps/realrobot/realrobot.rapp</rocon_app>
    <rocon_app>rapps/realrobot_sim/realrobot_sim.rapp</rocon_app>
    <rocon_app>rapps/realrobot_real/realrobot_real.rapp</rocon_app>
    <rocon_app>rapps/make_a_map/make_a_map.rapp</rocon_app>
    <rocon_app>rapps/annotate_a_map/annotate_a_map.rapp</rocon_app>
  </export>
</package>
