<?xml version="1.0"?>
<package>
  <name>realrobotshow_order_manager</name>
  <version>0.0.0</version>
  <description>The real robot show order manager package</description>
  <maintainer email="dwlee@yujinrobot.com">Dong wook Lee</maintainer>

  <license>BSD</license>
  <author>Dong wook Lee</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>simple_delivery_msgs</run_depend>
  <run_depend>rosbridge_server</run_depend>

  <export>
  </export>
</package>
